--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,10 @@ pluginManagement {
         mavenCentral()
         gradlePluginPortal()
     }
+
+    plugins {
+        id "com.ahasbini.android-opencv-gradle-plugin" version "0.1.3-dev"
+    }
 }
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
@@ -21,3 +25,5 @@ dependencyResolutionManagement {
 
 rootProject.name = "Crossle-App"
 include ':app'
+
+
