--- a/settings.gradle
+++ b/settings.gradle
@@ -9,12 +9,10 @@ pluginManagement {
         }
         mavenCentral()
         gradlePluginPortal()
-    }
-
-    plugins {
-        id "com.ahasbini.android-opencv-gradle-plugin" version "0.1.3-dev"
+        jcenter()
     }
 }
+
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
