--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,12 @@ android {
     namespace 'com.example.crossle'
     compileSdk 34
 
+    packagingOptions {
+        resources {
+            excludes += ["META-INF/DEPENDENCIES"]
+        }
+    }
+
     defaultConfig {
         applicationId "com.example.crossle"
         minSdk 29
@@ -43,4 +49,10 @@ dependencies {
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
     implementation libs.jsonLib
+    implementation libs.okhttp
+    implementation libs.httpcomponents
+    implementation libs.mongodb
+    implementation libs.slf4jApi
+    implementation libs.slf4jSimple
+    implementation libs.logback
 }
